--- a/style.css
+++ b/style.css
@@ -14,9 +14,12 @@
 .navbar{
     position: fixed;
     width: 100%;
-    padding: 15px 0;;
-    background: crimson;
+    padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
+}
+.navbar .sticky{
+    padding: 30px 0;
+    background: crimson;
 }
 .navbar .max-width {
     display: flex;
@@ -28,6 +31,9 @@
 font-size: 35px;
 font-weight: 600;
 }
+.navbar .logo a span{
+    color: crimson;
+}
 .navbar .menu li {
     list-style: none;
     display: inline-block;
@@ -37,10 +43,35 @@ font-weight: 600;
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
+transition: color 0.3s ease;
 }
-
+.navbar .menu li a:hover{
+    color: crimson;
+}
 .home{
     display: flex;
-    background: url("") no-repeat center;
+    background: url("wallpapersden.com_cool-4k-pattern_3840x2160.jpg") no-repeat center;
     height: 100vh;
+    color: #fff;
+    min-height: 500px;
+    font-family: 'Ubuntu', sans-serif;
+}
+.home .max-width{
+    margin: auto 0 auto 40px;
+}
+.home .home-content .text-1{
+    font-size: 27px;
+}
+.home .home-content .text-2{
+    font-size: 75px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+.home .home-content .text-3{
+    font-size: 40px;
+    margin: 5px 0;
+}
+.home .home-content .text-3 span{
+    color: crimson;
+    font-weight: 600;
 }
